
FUTURE:

===== 2.0 - Under Development =====
Est. Release: October 2014
Features subject to change.

* New "flat" icon for the iOS 7+ era.

* Tabbed browsing.

* Data encryption with an app-level password. Supplements current
  encryption done by the iOS operating system, improving protection
  against forensic tools.

===== 1.5.9 - Pending App Store Approval =====
Sep 26 2014 - Submit Date

* Tor updated to 0.2.5.10, the first stable release in the 0.2.5.X series.
  https://blog.torproject.org/blog/tor-02510-released-and-tor-023x-deprecated
  https://gitweb.torproject.org/tor.git?a=blob_plain;hb=release-0.2.5;f=ReleaseNotes

* OpenSSL updated to 1.0.1j, fixing four vulnerabilities including the
  POODLE attack.
  https://www.openssl.org/news/secadv_20141015.txt


CURRENT VERSION:

===== 1.5.8 - In App Store =====
Sep 26 2014 - Submit Date
Oct 08 2014 - App Store Availability

1.5.6 was submitted, but replaced before App Store release.
1.5.7 version number was skipped due to an issue with iTunes Connect.

* Fix major issue where "Browser Settings" button did not open settings
  page on iPad.

* App now uses the native device resolution on iPhone 6 and iPhone 6 Plus,
  instead of going into "stretch mode".

* Fix "screen blanking" behavior when switching away from Onion Browser.

* Change app name on home screen back to "Onion Browser" since it seems that
  the ellipsis-causing change in iOS 7 was possibly fixed in iOS 7.1 or 8.

* User-agent spoofing strings updated to the latest iOS 8 Safari and Mac OS
  X Mavericks Safari (7.1).

* Tor updated to 0.2.5.8-rc, the second release candidate in the
  0.2.5.X series. The switch to 0.2.5.X should somewhat improve connection
  stability, as well as improve overall security. 0.2.5.8 in particular
  improves connections to hidden services.
  https://blog.torproject.org/blog/tor-0257-rc-out
  https://gitweb.torproject.org/tor.git?a=blob_plain;hb=release-0.2.5;f=ReleaseNotes


PREVIOUS VERSIONS:

===== 1.5.5 =====